# clusterkit

./: .gitignore  Rakefile  clusterkit.gemspec
.github/workflows/: build.yml  ci.yml  release.yml
ext/clusterkit/: Cargo.toml  extconf.rb
ext/clusterkit/src/: clustering.rs  embedder.rs  hnsw.rs  lib.rs  svd.rs  utils.rs
ext/clusterkit/src/clustering/: hdbscan_wrapper.rs
lib/: clusterkit.rb
lib/clusterkit/: clusterkit.rb  version.rb
spec/: require_spec.rb
spec/clusterkit/: hnsw_spec.rb
