[package]
name = "clusterkit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6", features = ["embed"] }
annembed = { git = "https://github.com/scientist-labs/annembed", tag = "clusterkit-0.1.1" }
hnsw_rs = { git = "https://github.com/scientist-labs/hnswlib-rs", tag = "clusterkit-0.1.0" }
hdbscan = "0.11"
ndarray = "0.16"
num-traits = "0.2"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[features]
default = ["openblas-static"]
openblas-static = ["annembed/openblas-static"]
openblas-system = ["annembed/openblas-system"]
intel-mkl-static = ["annembed/intel-mkl-static"]
macos-accelerate = ["annembed/macos-accelerate"]
